# xpropcache

./: .gitignore  LICENSE  README.md  pyproject.toml
src/xpropcache/: __init__.py
