[build-system]
requires = ["setuptools==76.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpropcache"
authors = [
    {name = "Adrian F. Hoefflin", email = "srccircumflex@outlook.com"},
]
description = "Lightweight utilities for cached properties with selective reset and pickle-safe classes."
readme = "README.md"
keywords = [
    "cached_property", "pickle", "property cache"
]
license = {text = "MIT License"}
classifiers = [
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "xpropcache.__version__"}

[project.urls]
Homepage = "https://github.com/srccircumflex/xpropcache"
